2003/09/05 01:02 muppetman

	* xs/Gtk2.xs: route Gtk-related g_log domains through gperl

	* MANIFEST: updated

	* xs/GdkRgb.xs: keep SvImageDataPointer private

2003/09/04 22:20 muppetman

	* Gtk2.pm, README, debian/changelog, META.yml, ChangeLog: prep for
	0.97 release

	* gtk2perl.h: export gtk2perl_menu_position_func

	* Gtk2.exports, Makefile.PL: add exports file

2003/09/04 18:48 rwmcfa1

	* MANIFEST: gtk.typemap and t/26.GtkSimpleMenu.t added.

2003/09/03 18:37 rwmcfa1

	* pm/SimpleMenu.pm: pod doc added, no longer keep entries and menu_tree
	around unless we're asked to.

	* t/26.GtkSimpleMenu.t: inital import

2003/08/31 19:59 muppetman

	* CodeGen.pm, gdk.typemap: use Glib's new T_GPERL_GENERIC_WRAPPER to
	cut out 2/3 of the typemap code.

	* Gtk2.pm: don't set RTLD_GLOBAL on darwin, it generates a warning.

	* Makefile.PL, README: we now require Glib 0.97 for 
	T_GPERL_GENERIC_WRAPPER.

	* gtk2perl.h, xs/GtkDnd.xs, xs/GtkSelection.xs, gtk.typemap: implement
	GtkTargetList and several of the drag'n'drop APIs that depend on it.
	done with custom code, as these are apparently somewhat internal
	structures that don't have built-in boxed type support.

2003/08/30 02:33 muppetman

	changes made while listening to cheesy 80s scandinavian prog metal in
	the middle of the night while everyone's asleep (oh, the nostalgia):

	* AUTHORS, xs/GdkPixbuf.xs: patch from Anuradha Ratnaweera implements
	Gtk2::Gdk::Pixbuf->new_from_xpm_data

	* examples/timeouttest.pl: apparently this was broken for a long time.

	* xs/Gtk2.xs: updated commentary.

2003/08/28 23:17 muppetman

	* Gtk2.pm, README, debian/changelog: updated for 0.96 release

	* xs/GtkCalendar.xs: celendar members patch from chas, mangled by me

2003/08/28 10:09 rwmcfa1

	* xs/GtkWidget.xs: slight modifications of a patch by thierry vignaud 
	applied. impelements text direction functions.

2003/08/28 08:44 rwmcfa1

	* t/24.GtkTreeView.t: torsten's patch applied to fix "assertion