@@ -1,3 +1,9 @@
+2003/09/06 19:23 rwmcfa1
+
+	* Makefile.PL: dist-rpms build target added
+
+	* perl-Gtk2.spec.in: initial import
+
 2003/09/05 01:02 muppetman
 
 	* xs/Gtk2.xs: route Gtk-related g_log domains through gperl
